--- a/ProjetoKPI/app/views/informacoes_consolidadas.ejs
+++ b/ProjetoKPI/app/views/informacoes_consolidadas.ejs
@@ -30,7 +30,7 @@
                         <th>Data</th>
                         <th>Total Produtos Zerados</th>
                         <th>Nivel de Rupturas</th>
-                        <th>Perdas Setembro</th>
+                        <th>Perdas Outubro</th>
 
                     </tr>
                 </thead>
