--- a/ProjetoKPI/app/views/AgendamentoMercadoria/agendamento.ejs
+++ b/ProjetoKPI/app/views/AgendamentoMercadoria/agendamento.ejs
@@ -40,16 +40,12 @@
                 <input type="text" class="form-control" id="NFs" name="NOTAS_FISCAIS">
             </div>
             <div class="form-group col-md-2">
-                <label for="PedidoGoyaz">Pedido Goyaz</label>
-                <input type="text" class="form-control" id="PedidoGoyaz" name="PEDIDO_GOYAZ">
-            </div>
-            <div class="form-group col-md-2">
                 <label for="Volumes">Volumes:</label>
                 <input type="text" class="form-control" id="Volumes" name="VOLUMES">
             </div>
 
-            <button type="button" id="addInput" class="btn btn-light pequeno"><img
-                    src="images/imagem_adicionar.png"></button>
+            <!-- <button type="button" id="addInput" class="btn btn-light pequeno"><img
+                    src="images/imagem_adicionar.png"></button> -->
 
         </div>
         <div class="form-row" id="dynamicDiv"></div>
@@ -121,9 +117,10 @@
                 <thead>
                     <tr>
                         <th>Notas Fiscais</th>
-                        <th>Pedido Goyaz</th>
                         <th>Volumes</th>
                         <th>Fornecedor</th>
+                        <th>Transportadora</th>
+                        <th>Resp Agend</th>
                         <th>Dia Agendado</th>
                         <th>Hora Inicio</th>
                         <th>Hora Fim</th>
@@ -136,9 +133,10 @@
                         <% agendamento.forEach(function(agendamento){ %>
                     <tr>
                         <td align="center"><%= agendamento.NOTAS_FISCAIS %></td>
-                        <td align="center"><%= agendamento.PEDIDO_GOYAZ%></td>
                         <td align="center"><%= agendamento.VOLUMES%></td>
                         <td align="center"><%= agendamento.FORNECEDOR_NOME %></td>
+                        <td align="center"><%= agendamento.TRANSPORTADORA_NOME %></td>
+                        <td align="center"><%= agendamento.TRANSPORTADORA_RESP_AGEND %></td>
                         <td align="center"><%= agendamento.DIA_AGENDAMENTO %></td>
                         <td align="center"><%= agendamento.HORARIO_INICIO %></td>
                         <td align="center"><%= agendamento.HORARIO_FIM %></td>
@@ -155,7 +153,7 @@
     </form>
 
 
-    <script>
+    <!-- <script>
         $(function () {
             var scntDiv = $('#dynamicDiv');
             $(document).on('click', '#addInput', function () {
@@ -175,7 +173,7 @@
                 return false;
             });
         });
-    </script>
+    </script> -->
 
 </body>
 
