--- a/ProjetoKPI/app/views/AgendamentoMercadoria/homeAgendamento.ejs
+++ b/ProjetoKPI/app/views/AgendamentoMercadoria/homeAgendamento.ejs
@@ -23,6 +23,10 @@
             <form action="/gerar_agendamento" method="get">
                 <button type="submit" class="btn btn-primary">Gerar Agendamento</button>
             </form>
+
+            <form action="/consultar_agendamento" method="get">
+                <button type="submit" class="btn btn-primary">Consultar Agendamentos</button>
+            </form>
         </div>
     </div>
 
